welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:4: error: ';' expected but 'if' found.
	} if (bOk=true) {
          ^