welcome.lessons.welcome.bat.bool2.InOrder.scala.code
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {
	if (bOk= false && b>a && c>b) {
		return true
	} if (bOk=true) {
		return true
	} else {
		return false
	}
}
